--- a/recipes/garlic-pasta.html
+++ b/recipes/garlic-pasta.html
@@ -1,3 +1,8 @@
 <body>
     <h1>Garlic Recipe</h1>
+    <img src="../Images/garlic-pasta.jpg" width="350" alt="A garlic Pasta photo in a plate">
+    <h1>Description:</h1>
+    <h3>Pasta with herbs, delicious sauteed garlic, and plenty of freshly grated Parmesan cheese.</h3> 
+    <p> Chop the garlic so that some is minced and some is larger pieces. </p>
+    <p> You can substitute 1 tablespoon Italian seasoning blend for the fresh herbs.</p>
 </body>
