Finished for now Garlic-Pasta.html

--- a/recipes/garlic-pasta.html
+++ b/recipes/garlic-pasta.html
@@ -5,4 +5,30 @@
     <h3>Pasta with herbs, delicious sauteed garlic, and plenty of freshly grated Parmesan cheese.</h3> 
     <p> Chop the garlic so that some is minced and some is larger pieces. </p>
     <p> You can substitute 1 tablespoon Italian seasoning blend for the fresh herbs.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1 (16 ounce)/(450g) package dry penne pasta</li>
+        <li>1 medium head garlic, peeled and chopped</li>
+        <li>½ cup olive oil</li>
+        <li>1 tablespoon chopped fresh basil</li>
+        <li>1 tablespoon fresh oregano</li>
+        <li>2 tablespoon chopped fresh parsley</li>
+        <li>1 tablespoon crushed red pepper</li>
+        <li>1 cup grated Parmesan cheese</li>
+    </ul>
+    <p></p>
+    <h3>Steps:</h3>
+    <ol>
+        
+        <li>Bring a large pot of lightly salted water to a boil.Cook pasta in boiling water for 8 to
+        10 minutes,or until al dente;drain. </li>
+        <p></p>
+        <li>In a skillet, saute garlic in oil on low heat, just hot enough to make the garlic sizzle; about 10 to 15 minutes.
+        <br>Season with basil,oregano,parsley, and crushed red pepper, and remove from heat.
+        </li>
+        <p></p>
+        <li>In a large bowl,toss cooked pasta with garlic and herb mixture, and let sit
+            <br>for 3 to 5 minutes.Sprinkle with Parmesan and serve.
+        </li>
+    </ol>
 </body>
