Made the page with the Strawberry salsa recipe.

--- a/recipes/strawberry-salsa.html
+++ b/recipes/strawberry-salsa.html
@@ -1,3 +1,24 @@
 <body>
-    
+    <h1>Strawberry Salsa</h1>
+    <img src="../Images/Strawberry-Salsa.jpeg" width="350" alt="A image o a Strawberry salsa in a plate">
+    <h1>Description:</h1>
+    <h3>A sweet salsa that is great with pork and chicken dishes.</h3>
+    <p></p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1 pin fresh strawberries,sliced</li>
+        <li>4 roma(plum) tomatoes, seeded and chopped</li>
+        <li>1 jalapeno peppers, seeded and minced</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 lime, juiced</li>
+        <li>1 tablespoon olive oil</li>
+    </ul>
+    <p></p>
+    <h3>Steps:</h3>
+    <ol>
+        <li>In a large bowl, combine strawberries, tomatoes, chile peppers, garlic, lime juice and oil. </li>
+        <li>Toss all together to mix and coat.</li>
+        <li>Cover dish and refrigerate for 2 hours to chill.</li>
+        <li>Ready to serve!</li> 
+    </ol>
 </body>
