--- a/recipes/hash-browns-classic.html
+++ b/recipes/hash-browns-classic.html
@@ -1,3 +1,34 @@
 <body>
     <h1>Classic Hash Browns</h1>
+    <img src="../Images/hash-browns.jpg" width="350" alt="A Classic Garlic Pasta on a white plate">
+    <h2>Description:</h2>
+    <h3>These classic diner-style hash browns are crispy on the outside and fluffy on the inside.</h3>
+    <p></p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>2 russet potatoes,peeled</li>
+        <li>3 tablespoons clarified butter</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>1 pinch cayenne pepper, or to taste</li>
+        <li>1 pinch paprika, or to taste</li>
+    </ul>
+    <p></p>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Shred potatoes into a large bowl filled with cold water.Stir until water is cloudy,
+        <br>drain, and cover potatoes again with fresh cold water.Stir again to dissolve excess
+        <br>starch.Drain potatoes well, pat dry with paper towels, and squeeze out any excess
+        <br>moisture.
+        </li>
+        <p></p>
+        <li>Heat clarified butter in a large non-stick pan over medium heat.Sprinkle shredded
+        <br>potatoes into the hot butter and season with salt,black pepper, cayenne pepper, and
+        <br>paprika.
+        </li>
+        <p></p>
+        <li>Cook potatoes until a brown crust forms on the bottom,about 5 minutes.Continue to
+        <br>cook and Stir until potatoes are browned all over,about 5 more minutes.   
+        </li>
+
+    </ol>
 </body>
